<resources>
    <string name="app_name">Jobs Portal</string>
    <string name="title_activity_home">Popular Jobs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jobs Portal</string>
    <string name="nav_header_subtitle">jobs@jobportal.com</string>
    <string name="nav_header_desc">Menu</string>
    <string name="action_settings">Settings</string>

    <string name="reg_name">Enter Name</string>
    <string name="reg_email">Enter Email Address</string>
    <string name="reg_password">Enter Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Create an Account</string>
    <string name="btn_cancel">Cancel</string>
    <string name="reg_type_jobseeker">Jobseeker</string>
    <string name="reg_type_employer">Employer</string>
    <string name="heading_type">Select your Role</string>

    <string name="ic_menu_jobs_applied">My Jobs</string>
    <string name="ic_menu_my_resume">My Resume</string>
    <string name="ic_menu_logout">Logout</string>
    <string name="ic_menu_user_manual">User Manual</string>
    <string name="ic_update_profile">Update Profile</string>
    <string name="ic_support_center">Support Center</string>
    <string name="title_activity_employer_home">Posted Jobs</string>
    <string name="list_of_applications">Job Applications</string>
    <string name="post_job_title">Add New Job</string>
    <string name="Job_Title">Enter Job Title</string>
    <string name="Job_description">Enter Job Description</string>
    <string name="Job_Schedule">Enter Job Type</string>
    <string name="Job_Location">Enter Address</string>
    <string name="Job_Submit">Post Job</string>
    <string name="job_posting">Job Posting</string>
    <string name="jobs">Jobs</string>
    <string name="location">Job Fair Location</string>
    <string name="your_jobs">Jobs Posted by You</string>
    <string name="login">Login Here</string>
    <string name="register_here">Register Here</string>


</resources>
