<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_location"
            android:title="@string/location" />
        <item
            android:id="@+id/nav_user_manual"
            android:icon="@drawable/ic_user_manual"
            android:title="@string/ic_menu_user_manual" />


    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_action_supportcenter"
                android:title="@string/ic_support_center" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/ic_menu_logout" />

        </menu>
    </item>


</menu>
