<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtName"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/register_here"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/reg_name"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/reg_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_lock"
        android:hint="@string/reg_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtSelectType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading_type"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="16sp"/>

    <RadioGroup
        android:id="@+id/rdoAccountType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="16sp">

        <RadioButton
            android:id="@+id/rdoJobseeker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reg_type_jobseeker"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/rdoEmployer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reg_type_employer"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="16sp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="3dp"
        android:textColor="#ffffff"
        android:background="#000000"
        android:textSize="17sp"
        android:textStyle="normal"
        android:text="@string/btn_signup" />

</LinearLayout>