<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtEmail"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/reg_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtPassword"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        android:hint="@string/reg_password"
        android:drawableLeft="@drawable/ic_lock"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="3dp"
        android:textColor="#ffffff"
        android:background="#000000"
        android:textSize="17sp"
        android:textStyle="normal"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="3dp"
        android:textColor="#ffffff"
        android:background="#000000"
        android:textSize="17sp"
        android:textStyle="normal"
        android:text="@string/btn_signup" />
</LinearLayout>