<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".PostJobActivity">

    <TextView
        android:id="@+id/txtJobTitleHeading"
        android:baselineAligned="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="Post Job"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edtJobTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/Job_Title"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtJobDescription"
        android:ems="10"
        android:hint="@string/Job_description"
        android:inputType="textMultiLine"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/edtJobTimings"
        android:ems="10"
        android:hint="@string/Job_Schedule"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/edtJobAddress"
        android:ems="10"
        android:hint="@string/Job_Location"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btnSubmitJob"
        android:text="@string/Job_Submit"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/black"
        android:drawablePadding="8dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

</LinearLayout>